--- a/config-test.properties
+++ b/config-test.properties
@@ -1,6 +1,54 @@
+#spring.profiles.active=dev
+mybatis.mapper-locations: classpath*:mapper/**.xml
 
-#\u670D\u52A1\u7AEF\u7684\u5B9E\u4F8B\u540D\u79F0
-eureka.instance.hostname=eureka8084.hmc.com
+spring.application.name=springcloud-provider
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/jifang_zh?useSSL=false&useUnicode=true&characterEncoding\
+  =utf8&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=123456
+
+
+#management.endpoints.web.exposure.include=*
+
+hystrix.dashboard.proxy-stream-allow-list="*"
+
+
+
+
+server.tomcat.uri-encoding=UTF-8
+
+server.tomcat.max-threads=200
+
+server.tomcat.max-connections=10000
+#控制台打印sql
+#spring.jpa.show-sql=true
+#让控制器输出的json格式更美观
+spring.jackson.serialization.indent-output=true
+# HTTP消息头的最大大小（以字节为单位）。
+server.maxHttpHeaderSize=1024000
+#HTTP请求和响应的字符集。 如果未明确设置，则添加到“Content-Type”头。
+logging.level.com.shengwosoft.mapper=debug
+logging.level.com.shengwosoft.service=info
+
+eureka.instance.instance-id=provider8001
+
+eureka.instance.prefer-ip-address=true
+
+
+#访问地址
+eureka.client.service-url.defaultZone=http://eureka8084.hmc.com:7001/eureka/,http://eureka8085.hmc.com:7002/eureka/,http://eureka8086.hmc.com:7003/eureka/
+
+
+
+
+#info配置
+
+info.app.name=yuyan.springcloud
+
+info.compay.name=kuangshi
 
 
 
